// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests in ProductTitle component should render ProductTitle component with the custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`tests in ProductTitle component should show the title as product name if title is not defined 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffe Mug - No Image!
  </span>
</div>
`;
